new_tests/semantics/type/bad/048_FD2.cm

class myClass {
    public myVar:Real = 'c'
}
